Changelog
---------
Version 0.3 (July 8, 2019)
	This version of the toolbox is now available on Scilab 6.0.x
	Upgraded solver libraries to their latest version and added the following functions:	
	* quadprogCLP
	Changes to help files
	"_gradhess" in intfmincon has been improved
	Note that Symphony does not accept sparse matrices as input anymore. 
	
	

Version 0.2.3 (December 11, 2018)

  Edits in quadprog help file
  Restructured the linprog lambda parameter
  Reduced size of source and all binaries

Version 0.2.2 (July 27, 2018)

  Reduced the size of the source code and binaries

Version 0.2.1 (July 20, 2018)

  Changed names of the following functions:
    *cbcintlinprog => intlinprog
    *intqpipopt => intquadprog
    *qpipopt => quadprog
    *qpipoptmat => quadprogmat
 				
Version 0.2 (July 5, 2018)

  Upgraded solver libraries to their latest version and added the following     
 functions:
    *cbcintlinprog 				
    *fotversion
    *intfminbnd
    *intfmincon
    *intfminimax
    *intfminunc
    *intqpipopt   